Update sponsors structure
- Sponsor logos on home page point to sponsor pages
- Sponsor pages point to sponsor links from the logo

--- a/website_2025/themes/PyCon-Israel-peliconf/sass/04_components/_site-partners.scss
+++ b/website_2025/themes/PyCon-Israel-peliconf/sass/04_components/_site-partners.scss
@@ -180,6 +180,13 @@
     max-height: 70px;
 }
 
+
+.page-heading__sponsor-logo {
+    padding-top: 1em;
+    background: $almost-white;
+}
+
+
 .sp-just-logo img {
     display: block;
     margin-left: auto;
