--- a/website_2025/themes/PyCon-Israel-peliconf/templates/index.html
+++ b/website_2025/themes/PyCon-Israel-peliconf/templates/index.html
@@ -179,7 +179,7 @@
     </div>
     <div class="sp-level {{ SPONSOR_LEVELS[sp_level]['class'] }}">
       {% for sp_page in sp_pages %}
-      {{ sponsors.sponsor_logo_for(sp_page) }}
+      {{ sponsors.sponsor_logo_for_home(sp_page) }}
       {% endfor %}
     </div>
     {% endfor %}
