Home page: Limit blog posts to five, add workshops as related event
While at it, fix map link on CFP Workshop

--- a/website_2025/themes/PyCon-Israel-peliconf/templates/index.html
+++ b/website_2025/themes/PyCon-Israel-peliconf/templates/index.html
@@ -71,7 +71,7 @@
         </header>
 
         <ol class="news-list">
-            {% for article in articles_page.object_list %}
+            {% for article in articles_page.object_list[:5] %}
             <li>
                 <article class="news-article">
                     <aside class="news-article__aside">
