--- a/website_2025/themes/PyCon-Israel-peliconf/templates/index.html
+++ b/website_2025/themes/PyCon-Israel-peliconf/templates/index.html
@@ -93,8 +93,8 @@
             {% endfor %}
         </ol>
 
-        {% if articles_page.has_other_pages() %}
-            {% include 'pagination.html' %}
+        {% if articles_page.object_list[5:] %}
+            {% include 'partials/link_to_blog.html' %}
         {% endif %}
     </section>
 </div>
@@ -213,6 +213,6 @@
     </div>
     </div>
 </section>
-{% endif %}{# EVENT_PARTNERS #}
+{% endif %}{# SPONSOR_LEVELS #}
 
 {% endblock content %}
